# pynotify

./: README.rst  pyproject.toml
Docs/: Changelog.pkg  Changelog.rst  Contributing.rst  conf.py  index.rst
Docs/_build/html/: .buildinfo  Changelog.html  Code-of-conduct.html  Contributing.html  License.html  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Docs/_build/html/License/: License.html
Docs/_build/html/Misc/: Code-of-conduct.html  Contributing.html
Docs/_build/html/_sources/: Changelog.rst.txt  index.rst.txt
Docs/_build/html/_sources/License/: License.rst.txt
Docs/_build/html/_sources/Misc/: Contributing.rst.txt
Docs/_build/html/_sources/autoapi/: index.rst.txt
Docs/_build/html/_sources/autoapi/pynotify/: index.rst.txt
Docs/_build/html/_sources/autoapi/pynotify/class_inotify/: index.rst.txt
Docs/_build/html/_sources/autoapi/pynotify/class_mask/: index.rst.txt
Docs/_build/html/_sources/autoapi/pynotify/events/: index.rst.txt
Docs/_build/html/autoapi/: index.html
Docs/_build/html/autoapi/pynotify/: index.html
Docs/_build/html/autoapi/pynotify/class_inotify/: index.html
Docs/_build/html/autoapi/pynotify/class_mask/: index.html
Docs/_build/html/autoapi/pynotify/events/: index.html
examples/: pynotify  test_inotify.py
packaging/: PKGBUILD  requirements.txt
scripts/: check-source  do-install
src/pynotify/: __about__.py  __init__.py  class_inotify.py  class_mask.py  events.py
src/pynotify/c-code/: Makefile  sizes.c
