[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynotify"
dynamic = ["version"]
description = "pynotify : 'Python Inotify Class"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/pynotify"]
include = [
    "src/pynotify",
    "src/pynotify/py.typed",
]


[project.urls]
Documentation = "https://github.com/gene-git/pynotify/Docs"
Issues = "https://github.com/gene-git/pynotify/issues"
Source = "https://github.com/gene-git/pynotify"

[tool.hatch.version]
path = "src/pynotify/__about__.py"

[tool.hatch.envs.default]

[tool.hatch.envs.default.scripts]
[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
]
